# purseinator

./: .gitignore  .vercelignore  CLAUDE.local.md  README.md  pyproject.toml  vercel.json
.beads/: metadata.json
.runtime/: session_id
alembic/: env.py
alembic/versions/: 50598c1bdfd4_initial_schema.py  706cd2f6eb48_add_sessions_table.py  a1b2c3d4e5f6_add_used_tokens_table.py  b2c3d4e5f6a7_add_photo_pipeline_columns.py  c1d2e3f4a5b6_add_staging_photos_table.py  ccda9275bbfa_add_item_metadata_columns.py  d2e3f4a5b6c7_harden_fk_cascades.py
api/: index.py
app/: auth.py  cli.py  database.py  deps.py  main.py  models.py  telemetry.py
app/routes/: auth.py  collections.py  items.py  photos.py  ranking.py  upload.py
app/services/: elo.py  photo_pipeline.py  (+1 more)
bagfolio/: auth.py  cli.py  cli_client.py  config.py  database.py  deps.py  main.py  telemetry.py
frontend/: .gitignore  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
purseinator/: cli.py  config.py  database.py  deps.py  main.py  models.py
scripts/: generate_purse_fixtures.py
simulations/: elo_convergence.py
tests/: conftest.py  test_auth.py  test_card_detector.py  test_cli_push.py  test_collections.py  test_condition.py  test_dev_login.py  test_elo.py  test_grouper.py  test_health.py  test_integration.py  test_items.py  test_models.py  test_pairing.py  test_photo_pipeline.py  test_photos.py  test_purse_fixtures.py  test_purse_generator.py  test_ranking.py  test_ranking_service.py  test_simulation.py  test_staging_cleanup.py  test_telemetry.py  test_upload.py
(+88 files in other folders)
